--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dilshad-Portfolio</title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-NG7W0480HZ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-NG7W0480HZ");
+    </script>
   </head>
   <body>
     <div id="root"></div>
